--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -35,6 +35,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: AGBS074/infra-repo
+          ref: main
           path: infra-repo
           token: ${{ secrets.INFRA_REPO_PAT }}
 
