--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -1,17 +1,17 @@
-name: CI/CD Pipeline
+name: CI-CD Pipeline
 
 on:
   push:
     branches:
-      - main
+      - main   # runs when you push to main branch of app repo
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout code
-      - name: Checkout code
+      # Step 1: Checkout app repo
+      - name: Checkout app repository
         uses: actions/checkout@v3
 
       # Step 2: Log in to DockerHub
@@ -21,31 +21,36 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 3: Build and push Docker image
-      - name: Build and push
-        id: docker_build
+      # Step 3: Build and push image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/hello-devops:${{ github.sha }}
 
-      # Step 4: Clone infra repo
+      # Step 4: Checkout infra repo
       - name: Checkout infra repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          repository: AGBS074/infra-repo
-          ref: main
+          repository: agbs074/infra-repo   # replace with your repo
+          ref: main                       # branch of infra-repo
           path: infra-repo
           token: ${{ secrets.INFRA_REPO_PAT }}
 
-      # Step 5: Update deployment.yaml with new image
-      - name: Update image tag
+      # Step 5: Debug current manifest (optional, for first run)
+      - name: Show current deployment manifest
+        run: cat infra-repo/hello-devops/deployment.yaml
+
+      # Step 6: Update manifest with new image
+      - name: Update Kubernetes manifest with new image
         run: |
           sed -i "s#${{ secrets.DOCKER_USERNAME }}/hello-devops:.*#${{ secrets.DOCKER_USERNAME }}/hello-devops:${{ github.sha }}#g" infra-repo/hello-devops/deployment.yaml
+          echo "Updated deployment.yaml:"
+          cat infra-repo/hello-devops/deployment.yaml
 
-      # Step 6: Commit and push changes
-      - name: Commit and push
+      # Step 7: Commit & push changes (only if changed)
+      - name: Commit and push changes
         run: |
           cd infra-repo
           git config user.name "github-actions"
